# sendspin-jack-bridge

./: .gitignore  README.md  pyproject.toml
sendspin_jack_bridge/: __init__.py  __main__.py  bridge.py
