[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=62.3"]

[project]
name = "sendspin-jack-bridge"
authors = [
  { name = "Sendspin Protocol Authors", email = "sendspin@openhomefoundation.org" },
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiosendspin>=0.0.0",
  "JACK-Client>=0.5.5",
  "numpy>=1.26.0",
]

description = "JACK Audio to Sendspin source bridge."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"

[project.scripts]
sendspin-jack-bridge = "sendspin_jack_bridge:main"

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "ruff==0.15.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sendspin_jack_bridge*"]

[tool.ruff]
fix = true
show-fixes = true

line-length = 100
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 10

[tool.mypy]
platform = "linux"
python_version = "3.12"
follow_imports = "normal"
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

packages = ["sendspin_jack_bridge"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
ignore = [
  "ANN002",
  "ANN003",
  "ANN401",
  "D203",
  "D213",
  "D417",
  "EM101",
  "EM102",
  "FIX002",
  "PLR2004",
  "PGH004",
  "PD011",
  "S101",
  "TC001",
  "TC003",
  "TD002",
  "TD003",
  "TD004",
  "TRY003",
  "TRY400",
  "COM812",
  "S104",
]

select = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["sendspin_jack_bridge"]

[tool.uv.sources]
aiosendspin = { path = "../aiosendspin", editable = true }
